src/home/styles.css
::-webkit-scrollbar {
    display: none;
}
#left-selector {
    position: absolute;
    left: 0px;
    top: 0px;
    width: 100px;
    height: 700px;
    background-color: #0D0D0E;
}
#news-container {
    position: absolute;
    left: 100px;
    top: 0px;
    width: 590px;
    height: 572px;
    background-color: #0C0C0C;
}
#update-container {
    position: absolute;
    left: 100px;
    top: 572px;
    
    width: 590px;
    height: 128px;
    background-color: #0C0C0C;
}
#server-selector {
    position: absolute;
    top: 0px;
    left: 690px;
    
    width: 390px;
    height: 700px;
    background-color: #0C0C0C;
}
div {
    border: 2px solid #1D1F22;
}

